// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Summary /> renders empty when no props supplied 1`] = `
<section
  className="main__summary"
>
  <h2>
    Your cart
  </h2>
  <div
    className="summary__total"
  >
    <div
      className="summary__total__label"
    >
      Total
    </div>
    <div
      className="summary__total__value"
    >
      $0.00
    </div>
  </div>
</section>
`;

exports[`<Summary /> renders summary with selected options when props are supplied 1`] = `
<section
  className="main__summary"
>
  <h2>
    Your cart
  </h2>
  <SummarySelected
    feature="Processor"
    idx={0}
    key="Processor-0"
    selectedOption={
      Object {
        "cost": 700,
        "name": "17th Generation Intel Core HB (7 Core with donut spare)",
      }
    }
  />
  <SummarySelected
    feature="Operating System"
    idx={1}
    key="Operating System-1"
    selectedOption={
      Object {
        "cost": 200,
        "name": "Ubuntu Linux 16.04",
      }
    }
  />
  <SummarySelected
    feature="Video Card"
    idx={2}
    key="Video Card-2"
    selectedOption={
      Object {
        "cost": 1150.98,
        "name": "Toyota Corolla 1.5v",
      }
    }
  />
  <SummarySelected
    feature="Display"
    idx={3}
    key="Display-3"
    selectedOption={
      Object {
        "cost": 1500,
        "name": "15.6\\" UHD (3840 x 2160) 60Hz Bright Lights and Knobs",
      }
    }
  />
  <div
    className="summary__total"
  >
    <div
      className="summary__total__label"
    >
      Total
    </div>
    <div
      className="summary__total__value"
    >
      $3,550.98
    </div>
  </div>
</section>
`;
